--- a/src/asset/css/style.css
+++ b/src/asset/css/style.css
@@ -13,10 +13,10 @@ body {
 
 h1 {
     text-align: center;
-    font-size: 3rem;
+    font-size: 2rem;
+    padding: 8px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin: 0;
-    padding: 1rem;
     background-color: #333;
     color: #FFF;
     margin-bottom: 30px;
